--- a/index3.html
+++ b/index3.html
@@ -92,7 +92,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image/pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="pic.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>MOHAMED THAHIR M</h1>
             <p>BCA Student</p>
         </div>
@@ -149,12 +149,12 @@
         </div>
     </section>
 
-    <section id="resume">
+    <section id="resume(2)">
     
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="./Mohamed Thahir M(1).pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="./resume(2).pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
